--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,8 @@
-table {
-	border-collapse: collapse;
-}
-td, th {
-	border: 1px solid black;
-	text-allign: center;
-	padding: 5px 10px;
-}
-th {
-	background-color: green;
-}
-img{
-	width: 200px;
+.ui-draggable
+{
+padding:15px;
+border-style:solid;
+border-width:1px;
+width:130px;
+height:100px;
 }
